--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -15,6 +15,7 @@
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
+        "plugin:react-hooks/recommended",
         "../.eslintrc.json"
     ],
     "parser": "@typescript-eslint/parser",
