--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
         "eslint-plugin-jsdoc": "^37.0.3",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-react": "^7.27.1",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-unused-imports": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
         "lint-staged": "^12.1.2",
