--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
         "@ianwalter/exclude-assets-plugin": "^1.0.0",
         "@types/codemirror": "5.60.5",
         "@types/d3": "^7.1.0",
+        "@types/lodash": "^4.14.181",
         "@types/node": "^12.20.37",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
